# MistralAiTest

./: main.py  mistral.py  pyproject.toml  requirements.txt
templates/: index.html
