[tool.poetry]
name = "mistralaitest"
version = "0.1.0"
description = ""
authors = ["alexander <3441@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
mistralai = "^1.1.0"
aiohttp = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
